--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <br>
         <!-- Quiz Type Selection -->
         <div id="quiz-type">
-            
-            <button onclick="startQuiz('animals')">Fixation to Mirror</button>
+            <a href="login.html" style="text-decoration: none;"><button>Fixation to mirror</button></a>
             <a href="VD.html" style="text-decoration: none;"><button>Visual Discrimination</button></a>
             <a href="VC.html" style="text-decoration: none;"><button>Virtual Closure</button></a>
             <a href="VFC.html" style="text-decoration: none;"><button>Virtual Form Constancy</button></a>
